--- a/src/main/webapp/admin/item-view.xhtml
+++ b/src/main/webapp/admin/item-view.xhtml
@@ -10,7 +10,7 @@
 
 
         <h3>Custom Content</h3>
-        <p:dataTable id="itemTable" var="item" value="#{modelCreator.item}"
+        <p:dataTable id="itemTable" var="item" value="#{modelDaoTestImpl.items}"
                      paginator="true">
                 <f:facet name="header">
                     Товары
