--- a/src/main/webapp/admin/item-view.xhtml
+++ b/src/main/webapp/admin/item-view.xhtml
@@ -10,11 +10,22 @@
 
 
         <h3>Custom Content</h3>
-        <p:dataTable id="itemTable" var="item" value="#{modelDaoTestImpl.items}"
+        <p:dataTable id="itemTable" var="item" value="#{itemViewController.itemDAO.items}"
                      paginator="true">
                 <f:facet name="header">
                     Товары
                 </f:facet>
+            <p:column width="30">
+                <p:link outcome="/admin">
+                    <i class="fa fa-edit" style="font-size: 1.5em; margin: 5px;"/>
+                    <f:param name="id" value="#{item.no}"/>
+                </p:link>
+            </p:column>
+            <p:column width="30">
+                <p:commandLink update="itemTable" actionListener="#{item.deleteItemByID(item.no)}">
+                    <i class="fa fa-trash" style="font-size: 1.5em; margin: 5px;"/>
+                </p:commandLink>
+            </p:column>
 
                 <p:column>
                     <f:facet name="header">
