--- a/src/main/webapp/admin/item-view.xhtml
+++ b/src/main/webapp/admin/item-view.xhtml
@@ -11,10 +11,8 @@
 
         <h3>Custom Content</h3>
         <p:dataTable id="itemTable" var="item" value="#{itemViewController.itemDAO.items}"
-                     paginator="true">
-                <f:facet name="header">
-                    Товары
-                </f:facet>
+                     paginator="true" rows="7">
+
             <p:column width="30">
                 <p:link outcome="/admin">
                     <i class="fa fa-edit" style="font-size: 1.5em; margin: 5px;"/>
@@ -62,13 +60,14 @@
 
                 <p:dataList id="varList" value="#{item.listVariants}" var="itemVar" type="unordered"
                             itemType="none" paginator="true" paginatorAlwaysVisible="false">
-                    <p:commandLink update="varList">
-                        <i class="fa fa-trash" style="font-size: 0.8em; margin: 5px;"/>
-                    </p:commandLink>
                     <p:link outcome="/admin">
                         <i class="fa fa-edit" style="font-size: 0.8em; margin: 5px;"/>
                         <f:param name="id" value="#{item.no}"/>
                     </p:link>
+                    <p:commandLink update="varList" actionListener="#{item.listVariants.remove(itemVar)}">
+                        <i class="fa fa-trash" style="font-size: 0.8em;  margin: 5px;"/>
+                    </p:commandLink>
+
                     <h:outputText value=" #{itemVar.color}, #{itemVar.size.code}" style="display:inline-block"/>
                 </p:dataList>
                 <p:link outcome="/admin">
