--- a/src/main/webapp/admin/item-view.xhtml
+++ b/src/main/webapp/admin/item-view.xhtml
@@ -59,6 +59,7 @@
                 </f:facet>
 
                 <p:dataList id="varList" value="#{item.listVariants}" var="itemVar" type="unordered"
+                            rendered="#{itemViewController.itemDAO.items.size()>0}"
                             itemType="none" paginator="true" paginatorAlwaysVisible="false">
                     <p:link outcome="/admin">
                         <i class="fa fa-edit" style="font-size: 0.8em; margin: 5px;"/>
