--- a/src/main/webapp/admin/main.xhtml
+++ b/src/main/webapp/admin/main.xhtml
@@ -21,7 +21,7 @@
             <p:separator/>
             <p:submenu label="Справочники">
                 <p:menuitem value="Пол" ajax="false" icon="ui-icon-close"/>
-                <p:menuitem value="Бренды" ajax="false" icon="ui-icon-close"/>
+                <p:menuitem value="Бренды" url="#{mainController.linkBrand}" icon="ui-icon-disk"/>
 
             </p:submenu>
             <p:separator/>
