--- a/src/main/webapp/admin/brand-edit.xhtml
+++ b/src/main/webapp/admin/brand-edit.xhtml
@@ -8,8 +8,8 @@
 <h:head>
 </h:head>
 <f:metadata>
-    <f:viewParam name="code" value="#{brandViewController.code}"/>
-    <f:viewAction action="#{brandViewController.init}"/>
+    <f:viewParam name="code" value="#{brandController.code}"/>
+    <f:viewAction action="#{brandController.init}"/>
 </f:metadata>
 <h:body>
     <h:form>
@@ -19,7 +19,7 @@
                 <p:outputLabel value="Code"/>
             </p:outputPanel>
             <p:outputPanel styleClass="ui-fluid">
-                <p:inputText value="#{brandViewController.brand.code}"/>
+                <p:inputText value="#{brandController.brand.code}"/>
             </p:outputPanel>
             <p:spacer height="20"/>
 
@@ -27,16 +27,15 @@
                 <p:outputLabel value="DESCRIPTION"/>
             </p:outputPanel>
             <p:outputPanel styleClass="ui-fluid">
-                <p:inputText value="#{brandViewController.brand.description}"/>
+                <p:inputText value="#{brandController.brand.description}"/>
             </p:outputPanel>
             <p:spacer height="20"/>
         </p:fieldset>
         <p:spacer height="20"/>
         <p:outputPanel>
-            <p:commandButton value="SAVE" action="#{brandViewController.save}"/>
+            <p:commandButton value="SAVE" action="#{brandController.save}"/>
             <p:spacer width="20"/>
-            <p:button value="Brand List" outcome="/admin-brand-view">
-                <f:param name="a" value="1"/>
+            <p:button value="Brand List" outcome="#{brandController.brandViewLink}">
             </p:button>
         </p:outputPanel>
 
