--- a/src/main/webapp/admin/item-edit.xhtml
+++ b/src/main/webapp/admin/item-edit.xhtml
@@ -3,9 +3,27 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-<f:view>
-    <h:outputLabel value="Hello, world"/>
+      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:p="http://primefaces.org/ui">
+<h:head>
+</h:head>
+<f:metadata>
+    <f:viewParam name="code" value="#{itemController.code}"/>
+    <f:viewAction action="#{itemController.init}"/>
+</f:metadata>
+<h:body>
+    <h:form>
+        <p:fieldset legend="EDIT Item">
+        </p:fieldset>
+        <p:spacer height="5"/>
+        <p:outputPanel>
+            <p:commandButton value="SAVE" action="#"/>
+            <p:spacer width="20"/>
+            <p:button value="Item List" outcome="#{itemController.itemViewLink}">
+            </p:button>
+        </p:outputPanel>
 
-</f:view>
+    </h:form>
+
+
+</h:body>
 </html>
