--- a/src/main/webapp/admin/main.xhtml
+++ b/src/main/webapp/admin/main.xhtml
@@ -20,7 +20,7 @@
             </p:submenu>
             <p:separator/>
             <p:submenu label="Справочники">
-                <p:menuitem value="Пол" ajax="false" icon="ui-icon-close"/>
+                <p:menuitem value="Пол" url="#{mainController.linkSex}" icon="ui-icon-disk"/>
                 <p:menuitem value="Бренды" url="#{mainController.linkBrand}" icon="ui-icon-disk"/>
 
             </p:submenu>
