--- a/src/main/webapp/admin/sex-edit.xhtml
+++ b/src/main/webapp/admin/sex-edit.xhtml
@@ -3,8 +3,50 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-<f:view>
-    <h:outputLabel value="Hello, world"/>
-</f:view>
+      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:p="http://primefaces.org/ui">
+<h:head>
+</h:head>
+<f:metadata>
+    <f:viewParam name="code" value="#{sexController.code}"/>
+    <f:viewAction action="#{sexController.init}"/>
+</f:metadata>
+<h:body>
+    <h:form>
+        <p:fieldset legend="EDIT Gender">
+            <p:spacer height="5"/>
+            <p:outputPanel>
+                <p:outputLabel value="Code"/>
+            </p:outputPanel>
+            <p:outputPanel styleClass="ui-fluid">
+                <p:inputText value="#{sexController.sex.code}"/>
+            </p:outputPanel>
+            <p:spacer height="20"/>
+
+            <p:outputPanel>
+                <p:outputLabel value="DESCRIPTION"/>
+            </p:outputPanel>
+            <p:outputPanel styleClass="ui-fluid">
+                <p:inputText value="#{sexController.sex.description}"/>
+            </p:outputPanel>
+            <p:spacer height="20"/>
+            <p:outputPanel styleClass="ui-fluid">
+                <h:outputText value="Childen: "/>
+                <p:selectBooleanButton id="value2" value="#{sexController.sex.children}" onLabel="Yes" offLabel="No"
+                                       onIcon="ui-icon-check" offIcon="ui-icon-close" style="width:100px">
+                </p:selectBooleanButton>
+            </p:outputPanel>
+        </p:fieldset>
+        <p:spacer height="5"/>
+        <p:outputPanel>
+            <p:commandButton value="SAVE" action="#{sexController.save}"/>
+            <p:spacer width="20"/>
+            <p:button value="Gender List" outcome="#{sexController.sexViewLink}">
+            </p:button>
+        </p:outputPanel>
+
+    </h:form>
+
+
+</h:body>
+
 </html>
