--- a/src/main/webapp/admin/main.xhtml
+++ b/src/main/webapp/admin/main.xhtml
@@ -22,6 +22,7 @@
             <p:submenu label="Справочники">
                 <p:menuitem value="Пол" url="#{mainController.linkSex}" icon="ui-icon-disk"/>
                 <p:menuitem value="Бренды" url="#{mainController.linkBrand}" icon="ui-icon-disk"/>
+                <p:menuitem value="Размерные шкалы" url="#{mainController.linkScale}" icon="ui-icon-disk"/>
 
             </p:submenu>
             <p:separator/>
