--- a/src/main/webapp/admin/scale-edit.xhtml
+++ b/src/main/webapp/admin/scale-edit.xhtml
@@ -3,9 +3,44 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-<f:view>
-    <h:outputLabel value="Hello, world"/>
-</f:view>
+      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:p="http://primefaces.org/ui">
+<h:head>
+</h:head>
+<f:metadata>
+    <f:viewParam name="code" value="#{itemScaleController.code}"/>
+    <f:viewAction action="#{itemScaleController.init}"/>
+</f:metadata>
+<h:body>
+    <h:form>
+        <p:fieldset legend="EDIT Scale">
+            <p:spacer height="5"/>
+            <p:outputPanel>
+                <p:outputLabel value="Code"/>
+            </p:outputPanel>
+            <p:outputPanel styleClass="ui-fluid">
+                <p:inputText value="#{itemScaleController.scale.code}"/>
+            </p:outputPanel>
+            <p:spacer height="20"/>
+
+            <p:outputPanel>
+                <p:outputLabel value="DESCRIPTION"/>
+            </p:outputPanel>
+            <p:outputPanel styleClass="ui-fluid">
+                <p:inputText value="#{itemScaleController.scale.description}"/>
+            </p:outputPanel>
+            <p:spacer height="20"/>
+        </p:fieldset>
+        <p:spacer height="20"/>
+        <p:outputPanel>
+            <p:commandButton value="SAVE" action="#{itemScaleController.save}"/>
+            <p:spacer width="20"/>
+            <p:button value="Size List" outcome="#{itemScaleController.scaleViewLink}">
+            </p:button>
+        </p:outputPanel>
+
+    </h:form>
+
+
+</h:body>
+
 </html>
