--- a/src/main/webapp/admin/scale-view.xhtml
+++ b/src/main/webapp/admin/scale-view.xhtml
@@ -3,7 +3,6 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 <h:head></h:head>
@@ -48,7 +47,7 @@
                     <h:outputText value="Размеры"/>
                 </f:facet>
 
-                <p:dataList id="sizeList" value="#{itemScaleController.scale.sizeList}" var="size"
+                <p:dataList id="sizeList" value="#{itemScaleController.getSizetByScale(scale)}" var="size"
                             type="unordered"
 
                             itemType="none" paginator="true" paginatorAlwaysVisible="false">
@@ -63,17 +62,18 @@
 
                     <h:outputText value=" #{size.code} " style="display:inline-block"/>
                 </p:dataList>
-                <p:link outcome="/admin">
+                <p:link outcome="#{itemScaleController.sizeEditLink}">
                     <i class="fa fa-plus-square-o" style="font-size: 0.8em; margin: 5px;"/>
-                    <f:param name="id" value="new"/>
-                    <h:outputText value="Новый вариант" style="display:inline-block"/>
+                    <f:param name="code" value=""/>
+                    <f:param name="scale" value="#{scale.code}"/>
+                    <h:outputText value="Add Size" style="display:inline-block"/>
                 </p:link>
 
             </p:column>
 
         </p:dataTable>
         <p:button class="fa fa-edit" style="font-size: 1.0em; margin: 5px;"
-                  value="New Scale" outcome="#{itemScaleController.sizeEditLink}">
+                  value="New Scale" outcome="#{itemScaleController.scaleEditLink}">
             <f:param name="code" value=""/>
         </p:button>
         <p:button class="fa fa-edit" style="font-size: 1.0em; margin: 5px;"
